--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,20 +39,6 @@ p {
   background-position: center;
 }
 
-.cover {
-  background: url(assets/img/hero-img.jpg);
-  background-size: cover;
-  background-color: #383838;
-  background-blend-mode: overlay;
-  background-attachment: fixed;
-}
-
-@media only screen and (max-device-width: 414px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .cover {
-    background-size: 100% auto;
-  }
-}
-
 /*---------------------------------------
   LOADER              
 -----------------------------------------*/
@@ -165,13 +151,13 @@ p {
 /*---------------------------------------
   COVER              
 -----------------------------------------*/
-.cover {
+/* .cover {
   display: flex;
   justify-content: center;
   align-content: center;
   flex-direction: row;
   color: #ffffff;
-}
+} */
 .cover .cover-text {
   position: absolute;
   z-index: 9;
@@ -180,6 +166,151 @@ p {
   transform: translate(-50%, -50%);
   width: 85%;
   text-align: center;
+}
+
+.cover {
+  overflow-x: hidden;
+  padding: 0;
+}
+
+.cover .carousel {
+  width: 100%;
+  min-height: 100vh;
+  padding: 80px 0;
+  margin: 0;
+  position: relative;
+}
+
+.cover .carousel-item {
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  z-index: 1;
+  transition-duration: 0.4s;
+}
+
+.cover .carousel-item::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  inset: 0;
+}
+
+.cover .info {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+}
+
+@media (max-width: 768px) {
+  .cover .info {
+    padding: 0 50px;
+  }
+}
+
+.cover .info h2 {
+  color: #fff;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  font-size: 56px;
+  font-weight: 700;
+  position: relative;
+}
+
+.cover .info h2:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 80px;
+  height: 4px;
+  background: var(--color-primary);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+@media (max-width: 768px) {
+  .cover .info h2 {
+    font-size: 36px;
+  }
+}
+
+.cover .info p {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 18px;
+}
+
+.cover .info .btn-get-started {
+  font-family: var(--font-primary);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+  border: 2px solid var(--color-primary);
+}
+
+.cover .info .btn-get-started:hover {
+  background: var(--color-primary);
+}
+
+.cover .carousel-control-prev {
+  justify-content: start;
+}
+
+@media (min-width: 640px) {
+  .cover .carousel-control-prev {
+    padding-left: 15px;
+  }
+}
+
+.cover .carousel-control-next {
+  justify-content: end;
+}
+
+@media (min-width: 640px) {
+  .cover .carousel-control-next {
+    padding-right: 15px;
+  }
+}
+
+.cover .carousel-control-next-icon,
+.cover .carousel-control-prev-icon {
+  background: none;
+  font-size: 26px;
+  line-height: 0;
+  background: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.6);
+  border-radius: 50px;
+  width: 54px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cover .carousel-control-prev,
+.cover .carousel-control-next {
+  z-index: 3;
+  transition: 0.3s;
+}
+
+.cover .carousel-control-prev:focus,
+.cover .carousel-control-next:focus {
+  opacity: 0.5;
+}
+
+.cover .carousel-control-prev:hover,
+.cover .carousel-control-next:hover {
+  opacity: 0.9;
 }
 
 /*---------------------------------------
