--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,12 @@ p {
   padding-right: 20px;
 }
 
+.btn-outline-secondary {
+  border-radius: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .btn-reply {
   color: #888d73;
   font-size: small;
@@ -502,6 +508,98 @@ p {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+/*---------------------------------------
+  GIFT             
+-----------------------------------------*/
+.gift .gift-icon {
+  font-size: 100px;
+}
+
+.gift .text-gift {
+  font-size: small;
+}
+
+.creditcard {
+  background: #888d73;
+  background: -webkit-linear-gradient(to left bottom, #edddbb, #888d73);
+  background: linear-gradient(to left bottom, #edddbb, #888d73);
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
+  padding: 5% 10%;
+  margin-top: 30px;
+}
+
+.creditcard-text {
+  font-size: medium;
+  color: #ffffff;
+}
+.creditcard-number {
+  font-size: x-large;
+  color: #ffffff;
+}
+.copy-number {
+  font-size: large;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.copied {
+  width: fit-content;
+  opacity: 0;
+  position: fixed;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  color: #888d73;
+  padding: 12px 16px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: 0.4s opacity;
+}
+
+.chip {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 40px;
+  border-radius: 5px;
+  background-image: linear-gradient(to bottom left, #ffecc7, #d0b978);
+  overflow: hidden;
+}
+.chip .chip-line {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #333;
+}
+.chip .chip-line:nth-child(1) {
+  top: 13px;
+}
+.chip .chip-line:nth-child(2) {
+  top: 20px;
+}
+.chip .chip-line:nth-child(3) {
+  top: 28px;
+}
+.chip .chip-line:nth-child(4) {
+  left: 25px;
+  width: 1px;
+  height: 50px;
+}
+.chip .chip-main {
+  width: 20px;
+  height: 25px;
+  border: 1px solid #333;
+  border-radius: 3px;
+  background-image: linear-gradient(to bottom left, #efdbab, #e1cb94);
+  z-index: 1;
 }
 
 /*---------------------------------------
