--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,8 +523,8 @@ p {
 
 .creditcard {
   background: #888d73;
-  background: -webkit-linear-gradient(to left bottom, #edddbb, #888d73);
-  background: linear-gradient(to left bottom, #edddbb, #888d73);
+  background: -webkit-linear-gradient(to left bottom, #ffffff, #edddbb);
+  background: linear-gradient(to left bottom, #ffffff, #edddbb);
   border-radius: 15px;
   -webkit-box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 10px 25px -5px rgba(0, 0, 0, 0.3);
@@ -535,15 +535,15 @@ p {
 
 .creditcard-text {
   font-size: medium;
-  color: #ffffff;
+  color: #888d73;
 }
 .creditcard-number {
   font-size: x-large;
-  color: #ffffff;
+  color: #888d73;
 }
 .copy-number {
   font-size: large;
-  color: #ffffff;
+  color: #888d73;
   text-decoration: none;
 }
 
